# FFT-using-matrices

./: .gitignore  CMakeLists.txt  README.md  source.cpp
.gitignore/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  FFT_using_matrices.sln  FFT_using_matrices.vcxproj  FFT_using_matrices.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
.gitignore/Debug/: FFT_using_matrices.ilk
.gitignore/FFT_using_matrices.dir/Debug/FFT_usin.A663F260.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  FFT_using_matrices.lastbuildstate  custombuild.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
.gitignore/FFT_using_matrices.dir/Release/FFT_usin.A663F260.tlog/: CL.command.1.tlog  CL.write.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
.gitignore/Win32/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
.gitignore/Win32/Release/ZERO_CHECK/ZERO_CHECK.tlog/: ZERO_CHECK.lastbuildstate
include/: my_matrix.hpp
src/: source.cpp
